2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* path-prefix-g++-3.3 path-prefix-g++-4.0: remove obsolete directories
	* install.sh: Stop installing path-prefix dirs

2005-04-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* path-prefix-g++-3.3 path-prefix-g++-4.0, install.sh: use two 
	possible path prefixes, path-prefix-g++-3.3 and path-prefix-g++-4.0, 
	depending on the current Distribution
	* path-prefix: empty out this (obsolete) directory

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.info.in: Remove new index in PreRm

2005-04-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* fink.info.in: Remove old index

2005-04-22  Daniel Macks  <dmacks@netspace.org>

	* fink.info.in: Don't use path-prefix when building fink
	itself (avoids catch-22 if user has broken installation)

2005-04-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* path-prefix: New dir, containing executables that fink wishes to
	put in the front of the path while building. For now that's just g++
	* install.sh: Install the new path-prefix dir and symlink

2005-04-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.4, a release
	on branch_0_24 which enables a default value for CXX instead
	of CXXFLAGS, and asks users more questions about obsolete mirrors

2005-04-12  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.3, a release
	on branch_0_24 which enables a default value for CXXFLAGS

2005-04-08  Daniel Macks  <dmacks@netspace.org>

	* fink.8.in: improved description of 'list' and 'apropos' patterns.

2005-04-04  Justin F. Hallett  <thesin@users.sourceforge.net>

	* bootstrap.pl: added var/lib/fink to mkdir to fix bootstraping

2005-03-30  Daniel Macks  <dmacks@netspace.org>

	* fink.info.in: add PreRm that removes package and shlibs databases

2005-03-24  Dave Morrison  <dmrrsn@users.sourceforge.net>
