@@ -1,5 +1,9 @@
 2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>
 
+	* fink.info.in: Remove new index at uninstall
+
+2005-04-25  Dave Vasilevsky  <vasi@users.sourceforge.net>
+
 	* path-prefix-g++-3.3 path-prefix-g++-4.0: remove obsolete directories
 	* install.sh: Stop installing path-prefix dirs
 
